# nonebot-plugin-diffsinger

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml  pylint.yml  python-publish.yml
diffsinger/: data_source.py
nonebot_plugin_diffsinger/: __init__.py  config.py  data_source.py
